This file records noteworthy changes.

1.3.8 (<date>)

* Drop support of ginac-config and ginac.m4. Please use pkg-config instead.

1.3.7 (05 February 2007)
* Fixed bug in expansion of power.
* Fixed bugs in functions S() (infinite loop), H() and zeta() (wrong results).
* Rebuilt bison related files with bison version 2.3 (fixes parse error bugs).
* Improved power::eval().
* Improved libreadline detection.

1.3.6 (13 December 2006)
* Better worst case behavior in heuristic gcd.
* Improved collecting for sparse multivariate polynomials.
* Improved collect_common_factors.
* Fixed bug in numerical evaluation of multiple polylogs.
* Fixed numerical integration of complex functions.
* Fixed bug in tensor::replace_contr_index().

1.3.5 (17 August 2006)
* Re-built bison related files that caused bugs with gcc 4.
* Fixed bugs in fderivative::match_same_type(), expairseq::match(),
  expand_dummy_sum(), and expairseq::map().
* Fixed template specialization for class container to be gcc 4.2 compliant.
* Output in csrc mode is now -x instead of -1.0*x.
* Fixed tutorial and reference generation in html/pdf/ps format.
* Modified autotool configuration to allow for compilation on MinGW.
* Debian packaging files updated.

1.3.4 (12 April 2006)
* More general index dimensions are now possible.
* Improved algebraic substitutions.
* Fixed wrong matching in .has(). 
* Fixed bug in differentiation of a power.
* collect_common_factors also works with negative powers of common factors now.
* Code clean-up and preparations for upcoming cln 1.2.

1.3.3 (24 October 2005)
* Fixed bug occuring in algebraic substitutions with expressions involving
  indices.
* Fixed bug that selected the wrong algorithm for determinants of purely
  numeric matrices with at least one floating point element.
* Fixed bug in function H that caused an infinite recursion for arguments
  around +-I.
* Fixed const-correctness in printing handler for GCC 4.0.2.
* Made lookup in adaptivesimpson precision-aware.