@@ -3,6 +3,7 @@ This file records noteworthy changes.
 1.3.8 (<date>)
 
 * Drop support of ginac-config and ginac.m4. Please use pkg-config instead.
+* atan2(y,x) branch cut correction.
 
 1.3.7 (05 February 2007)
 * Fixed bug in expansion of power.
